--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@clerk/nextjs": "^4.31.8",
     "@tanstack/react-query": "^4.36.1",
     "axios": "^1.6.2",
-    "next": "14.2.9",
+    "next": "^14.2.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "5.2.2",
@@ -22,7 +22,10 @@
     "@types/node": "20.9.0",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
+    "@types/ws": "^8.18.1",
     "autoprefixer": "10.4.16",
+    "eslint": "^9.28.0",
+    "eslint-config-next": "^15.3.3",
     "postcss": "8.4.31",
     "tailwindcss": "3.3.5"
   }
