📋 Update roadmap and testing infrastructure - Enhanced roadmap with clear progress tracking - Added v0.90.0-beta changelog entry - Fixed DiceRoller component tests (12/20 passing) - Implemented ARIA accessibility support - Added comprehensive error handling and null safety - Updated TypeScript configuration for Vitest globals - Improved component stability and code quality

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,10 +13,14 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "types": ["vitest/globals"],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./src/*"],
+      "@components/*": ["./components/*"],
+      "@utils/*": ["./utils/*"],
+      "@styles/*": ["./styles/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/tests/vitest.d.ts"],
   "exclude": ["node_modules"]
 }
