--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.21.0",
     "@next/font": "13.4.19",
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.88.0",
@@ -31,7 +35,17 @@
     "autoprefixer": "^10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "netlify-cli": "^22.1.3",
     "postcss": "^8.4.28",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "vitest": "^1.2.2",
+    "@vitest/coverage-v8": "^1.2.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@types/jest": "^29.5.12",
+    "jsdom": "^24.0.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "jest-websocket-mock": "^2.4.0"
   }
 }
